2010-07-23 Nikolay Orlenko  <okolya@gmail.com>

	* initial code generated with kickstarter