@@ -17,10 +17,12 @@
       
       <label index="pi_flexform.sheet_add">Additional Settings</label>
       <label index="pi_flexform.limit">Post Limit</label>
+      <label index="pi_flexform.hideDescription">Hide Description</label>
       <label index="pi_flexform.crop">Description crop</label>
       <label index="pi_flexform.wrapTitle">Title wrap</label>
       <label index="pi_flexform.wrapDescription">Description Wrap</label>
       <label index="pi_flexform.wrapPost">Post Wrap</label>
+      <label index="pi_flexform.hideAddThis">hide "AddThis"</label>
       <label index="pi_flexform.addthisuser">"Add This" username</label>
       <label index="pi_flexform.addthisconf">"Add This" UI Configuration Options (http://www.addthis.com/help/client-api#configuration-ui)</label>      
 		</languageKey>
